--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.CyE8N7WW.js",
+    "file": "_app/immutable/entry/app.DPvBzSvE.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -19,13 +19,13 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.BER07CM6.js",
+    "file": "_app/immutable/nodes/0.jF-4qUbw.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vy1QMRJW.js",
+      "_C8Z6faWn.js",
       "_DyjBc6Js.js",
       "_DI51QYyl.js"
     ],
@@ -34,7 +34,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CE_zQ6yZ.js",
+    "file": "_app/immutable/nodes/1.CVFrpviZ.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -42,11 +42,11 @@
     "imports": [
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
-      "_Bn3hKHD-.js"
+      "_B4QAc2R-.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.D-WC_Zvd.js",
+    "file": "_app/immutable/nodes/2.BZVx0p2Y.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -54,12 +54,12 @@
     "imports": [
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
-      "_vy1QMRJW.js",
-      "_Bn3hKHD-.js"
+      "_C8Z6faWn.js",
+      "_B4QAc2R-.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.DBwqrbUs.js",
+    "file": "_app/immutable/nodes/3.BfDbkW6E.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
@@ -68,11 +68,11 @@
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
       "_CR7VxdKE.js",
-      "_vy1QMRJW.js"
+      "_C8Z6faWn.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.FmuB0rx-.js",
+    "file": "_app/immutable/nodes/4.O7fNiXtr.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -81,7 +81,7 @@
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
       "_CR7VxdKE.js",
-      "_vy1QMRJW.js"
+      "_C8Z6faWn.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
@@ -95,16 +95,23 @@
       "_DI51QYyl.js"
     ]
   },
-  "_Bn3hKHD-.js": {
-    "file": "_app/immutable/chunks/Bn3hKHD-.js",
+  "_B4QAc2R-.js": {
+    "file": "_app/immutable/chunks/B4QAc2R-.js",
     "name": "stores",
     "imports": [
-      "_vy1QMRJW.js"
+      "_C8Z6faWn.js"
     ]
   },
   "_C1FmrZbK.js": {
     "file": "_app/immutable/chunks/C1FmrZbK.js",
     "name": "preload-helper"
+  },
+  "_C8Z6faWn.js": {
+    "file": "_app/immutable/chunks/C8Z6faWn.js",
+    "name": "entry",
+    "imports": [
+      "_DyjBc6Js.js"
+    ]
   },
   "_CR7VxdKE.js": {
     "file": "_app/immutable/chunks/CR7VxdKE.js",
@@ -135,20 +142,13 @@
       "_CR7VxdKE.js"
     ]
   },
-  "_vy1QMRJW.js": {
-    "file": "_app/immutable/chunks/vy1QMRJW.js",
-    "name": "entry",
-    "imports": [
-      "_DyjBc6Js.js"
-    ]
-  },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.6_io_ECZ.js",
+    "file": "_app/immutable/entry/start.9JMW9vsc.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_vy1QMRJW.js"
+      "_C8Z6faWn.js"
     ]
   }
 }
