--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,8 @@ functions = ".netlify/functions/"
 
 [build.environment]
 NODE_VERSION = "20"
+
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
