another try from bolt

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.DPvBzSvE.js",
+    "file": "_app/immutable/entry/app.D9H7sD1s.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -19,13 +19,13 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.jF-4qUbw.js",
+    "file": "_app/immutable/nodes/0.CV6DPoMd.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_C8Z6faWn.js",
+      "_B8QFiqg4.js",
       "_DyjBc6Js.js",
       "_DI51QYyl.js"
     ],
@@ -34,7 +34,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CVFrpviZ.js",
+    "file": "_app/immutable/nodes/1.CfIhU4dc.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -42,11 +42,11 @@
     "imports": [
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
-      "_B4QAc2R-.js"
+      "_C0AKrD2G.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.BZVx0p2Y.js",
+    "file": "_app/immutable/nodes/2.B-pR-NIb.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -54,12 +54,12 @@
     "imports": [
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
-      "_C8Z6faWn.js",
-      "_B4QAc2R-.js"
+      "_B8QFiqg4.js",
+      "_C0AKrD2G.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.BfDbkW6E.js",
+    "file": "_app/immutable/nodes/3.3doGXfzO.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
@@ -68,11 +68,11 @@
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
       "_CR7VxdKE.js",
-      "_C8Z6faWn.js"
+      "_B8QFiqg4.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.O7fNiXtr.js",
+    "file": "_app/immutable/nodes/4.NqCVJdkh.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -81,7 +81,7 @@
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
       "_CR7VxdKE.js",
-      "_C8Z6faWn.js"
+      "_B8QFiqg4.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
@@ -95,23 +95,23 @@
       "_DI51QYyl.js"
     ]
   },
-  "_B4QAc2R-.js": {
-    "file": "_app/immutable/chunks/B4QAc2R-.js",
+  "_B8QFiqg4.js": {
+    "file": "_app/immutable/chunks/B8QFiqg4.js",
+    "name": "entry",
+    "imports": [
+      "_DyjBc6Js.js"
+    ]
+  },
+  "_C0AKrD2G.js": {
+    "file": "_app/immutable/chunks/C0AKrD2G.js",
     "name": "stores",
     "imports": [
-      "_C8Z6faWn.js"
+      "_B8QFiqg4.js"
     ]
   },
   "_C1FmrZbK.js": {
     "file": "_app/immutable/chunks/C1FmrZbK.js",
     "name": "preload-helper"
-  },
-  "_C8Z6faWn.js": {
-    "file": "_app/immutable/chunks/C8Z6faWn.js",
-    "name": "entry",
-    "imports": [
-      "_DyjBc6Js.js"
-    ]
   },
   "_CR7VxdKE.js": {
     "file": "_app/immutable/chunks/CR7VxdKE.js",
@@ -143,12 +143,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.9JMW9vsc.js",
+    "file": "_app/immutable/entry/start.CMUcMxev.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_C8Z6faWn.js"
+      "_B8QFiqg4.js"
     ]
   }
 }
