--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   ".svelte-kit/generated/client-optimized/app.js": {
-    "file": "_app/immutable/entry/app.D9H7sD1s.js",
+    "file": "_app/immutable/entry/app.1dR8HCPW.js",
     "name": "entry/app",
     "src": ".svelte-kit/generated/client-optimized/app.js",
     "isEntry": true,
@@ -19,13 +19,13 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/0.js": {
-    "file": "_app/immutable/nodes/0.CV6DPoMd.js",
+    "file": "_app/immutable/nodes/0.JSn6nFIr.js",
     "name": "nodes/0",
     "src": ".svelte-kit/generated/client-optimized/nodes/0.js",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_B8QFiqg4.js",
+      "_BzbonHsI.js",
       "_DyjBc6Js.js",
       "_DI51QYyl.js"
     ],
@@ -34,7 +34,7 @@
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/1.js": {
-    "file": "_app/immutable/nodes/1.CfIhU4dc.js",
+    "file": "_app/immutable/nodes/1.DNjXVS39.js",
     "name": "nodes/1",
     "src": ".svelte-kit/generated/client-optimized/nodes/1.js",
     "isEntry": true,
@@ -42,11 +42,11 @@
     "imports": [
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
-      "_C0AKrD2G.js"
+      "_B8G3L3jm.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
-    "file": "_app/immutable/nodes/2.B-pR-NIb.js",
+    "file": "_app/immutable/nodes/2.D4RreCFx.js",
     "name": "nodes/2",
     "src": ".svelte-kit/generated/client-optimized/nodes/2.js",
     "isEntry": true,
@@ -54,12 +54,12 @@
     "imports": [
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
-      "_B8QFiqg4.js",
-      "_C0AKrD2G.js"
+      "_BzbonHsI.js",
+      "_B8G3L3jm.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/3.js": {
-    "file": "_app/immutable/nodes/3.3doGXfzO.js",
+    "file": "_app/immutable/nodes/3.Cmv5yG40.js",
     "name": "nodes/3",
     "src": ".svelte-kit/generated/client-optimized/nodes/3.js",
     "isEntry": true,
@@ -68,11 +68,11 @@
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
       "_CR7VxdKE.js",
-      "_B8QFiqg4.js"
+      "_BzbonHsI.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/4.js": {
-    "file": "_app/immutable/nodes/4.NqCVJdkh.js",
+    "file": "_app/immutable/nodes/4.e4Bth-nF.js",
     "name": "nodes/4",
     "src": ".svelte-kit/generated/client-optimized/nodes/4.js",
     "isEntry": true,
@@ -81,7 +81,7 @@
       "_DyjBc6Js.js",
       "_DI51QYyl.js",
       "_CR7VxdKE.js",
-      "_B8QFiqg4.js"
+      "_BzbonHsI.js"
     ]
   },
   ".svelte-kit/generated/client-optimized/nodes/5.js": {
@@ -95,18 +95,18 @@
       "_DI51QYyl.js"
     ]
   },
-  "_B8QFiqg4.js": {
-    "file": "_app/immutable/chunks/B8QFiqg4.js",
+  "_B8G3L3jm.js": {
+    "file": "_app/immutable/chunks/B8G3L3jm.js",
+    "name": "stores",
+    "imports": [
+      "_BzbonHsI.js"
+    ]
+  },
+  "_BzbonHsI.js": {
+    "file": "_app/immutable/chunks/BzbonHsI.js",
     "name": "entry",
     "imports": [
       "_DyjBc6Js.js"
-    ]
-  },
-  "_C0AKrD2G.js": {
-    "file": "_app/immutable/chunks/C0AKrD2G.js",
-    "name": "stores",
-    "imports": [
-      "_B8QFiqg4.js"
     ]
   },
   "_C1FmrZbK.js": {
@@ -143,12 +143,12 @@
     ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/entry.js": {
-    "file": "_app/immutable/entry/start.CMUcMxev.js",
+    "file": "_app/immutable/entry/start.DhwXAuIS.js",
     "name": "entry/start",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/entry.js",
     "isEntry": true,
     "imports": [
-      "_B8QFiqg4.js"
+      "_BzbonHsI.js"
     ]
   }
 }
